--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ language: objective-c
 osx_image: xcode8
 # cache: cocoapods
 # podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
+before_install:
+- gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
 - set -o pipefail && xcodebuild test -workspace Example/ActivityNavigationBar.xcworkspace -scheme ActivityNavigationBar-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
